--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,24 @@ body{
 
   color:#FFF
 }
+
+button {
+  background: #1646a0; 
+  color:#FFF;
+  padding: 0 45px;
+  border: 2px solid #FFF;
+  border-radius: 25px;
+  height: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: .4s;
+
+
+}
+
+button:hover{
+
+  background-color: #0923af ;
+}
